muleplapeli/src/main/resources/api/examples/errors/400.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "BAD_REQUEST"
      level: error
      description: "Unable to process your request, please check its validity."
